adjusting buttons positions